# automata

./: .gitignore  About.md  CFG.hs  Main.hs  PDA.hs  PDARecognition.cabal  Playground.hs  Utilities.hs  readme.md  stack.yaml
src/: CFG.hs  Main.hs  PDA.hs  RoseTree.hs  Utilities.hs
tests/: PDATests.hs
