cabal-version: 2.4
name: PDARecognition
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-3
x-last-ide-version: HfM1.8.2

executable PDARecognition
    main-is: src/Main.hs
    hs-source-dirs: 
        .
        src
        tests
    other-modules:
        CFG
        Utilities
        PDA
    default-language: Haskell2010
    build-depends:
        containers -any,
        base -any
